[package]
name = "fs_spacer"
version = "0.1.0"
authors = ["Michael Keßler <somnion@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "^0.2.94"
regex = "1.5.4"
lazy_static = "0.1.15"
serde = {version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

